--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@eslint/js": "^9.8.0",
     "@nx/angular": "^21.6.5",
     "@nx/devkit": "21.6.5",
+    "@nx/esbuild": "21.6.5",
     "@nx/eslint": "21.6.5",
     "@nx/eslint-plugin": "21.6.5",
     "@nx/jest": "21.6.5",
     "@nx/js": "21.6.5",
+    "@nx/node": "^21.6.5",
     "@nx/playwright": "21.6.5",
     "@nx/web": "21.6.5",
     "@playwright/test": "^1.36.0",
@@ -26,16 +28,19 @@
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^29.5.12",
-    "@types/node": "18.16.9",
+    "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
     "angular-eslint": "^20.3.0",
+    "esbuild": "^0.19.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
     "jest-util": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
     "nx": "21.6.5",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
