--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@monorepo-angular20/ui-shared": ["packages/ui-shared/src/index.ts"],
+      "@monorepo-angular20/ui-shared-a": ["packages/ui-shared-a/src/index.ts"],
+      "@monorepo-angular20/utils-common": ["packages/utils-common/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
